Change ticket preview popup tab from preview to summary Change z-index to overlay popup windows correctly

--- a/scp/css/scp.css
+++ b/scp/css/scp.css
@@ -845,6 +845,7 @@ h2 .reload {
 ul.tabs {
     padding:4px 0 0 20px;
     margin:0;
+    margin-bottom: 5px;
     text-align:center;
     height:29px;
     border-bottom:1px solid #aaa;
@@ -951,7 +952,7 @@ ul.tabs li a.active {
     display:block;
     height:30px;
     position:absolute;
-    z-index:1000;
+    z-index:3;
 }
 
 .tip_arrow {
@@ -960,7 +961,7 @@ ul.tabs li a.active {
     top:5px;
     left:-12px;
     width:12px;
-    z-index:700;
+    z-index:4;
 }
 
 .tip_box.right .tip_arrow {
@@ -991,7 +992,7 @@ ul.tabs li a.active {
     -moz-box-shadow: 3px 3px 3px #666;
     -webkit-box-shadow: 3px 3px 3px #666;
     box-shadow: 3px 3px 3px #666;
-    z-index:500;
+    z-index:3;
     position:absolute;
     top:0;
     left:-1px;
@@ -1261,7 +1262,7 @@ time {
     background:#f8f8f8;
     border:2px solid #2a67ac;
     display:none;
-    z-index:2000;
+    z-index:6;
     box-shadow: 0 5px 60px #001;
     border-radius: 5px;
     max-height: 72%;
@@ -1269,7 +1270,7 @@ time {
 }
 
 .redactor_air {
-    z-index: 6 !important;
+    z-index: 7 !important;
 }
 
 .dialog#advanced-search {
@@ -1484,7 +1485,7 @@ ul.progress li.no small {color:red;}
     width: 100%;
     height: 100%;
     background: #000;
-    z-index: 1;
+    z-index: 5;
     -webkit-transform: translate3d(0,0,0);
 }
 
